practice3/k8s/pdf-worker-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pdf-worker
  namespace: pdf-reports
  labels:
    app: pdf-worker
spec:
  type: ClusterIP
  selector:
    app: pdf-worker
  ports:
    - name: http
      port: 8000
      targetPort: http
