practice3/k8s/report-service-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: report-service
  namespace: pdf-reports
  labels:
    app: report-service
spec:
  type: ClusterIP
  selector:
    app: report-service
  ports:
    - name: http
      port: 8000
      targetPort: http
